changed theme to Just the Docs

--- a/tutorial.html
+++ b/tutorial.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html>
-<head>
-   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="container">
+---
+layout: default
+title: Tutorial
+nav_order: 1
+---
+
 <main>
-<header class="sectionhead">
+<header>
    <nav><a href="index.html">&lt; INDEX</a></nav>
-   <h1> TUTORIAL</h1>
+   <h1>Tutorial</h1>
    <nav><a href="prologue.html">PROLOGUE &gt;</a></nav>
 </header>
 <div class="sectionhead">
@@ -147,6 +146,3 @@
    <nav><a href="index.html">&lt; INDEX</a></nav>
    <nav><a href="prologue.html">PROLOGUE &gt;</a></nav>
 </footer>
-</div>
-</body>
-</html>
