--- a/prologue.html
+++ b/prologue.html
@@ -1,53 +1,53 @@
-<!DOCTYPE html>
-<html>
-<head>
-   <link rel="stylesheet" href="style.css">
-</head>
-<body>
-<div class="container">
-<main>
-<header class="sectionhead">
-   <nav><a href="index.html">&lt; INDEX</a></nav>
+---
+layout: default
+title: Prologue
+nav_order: 2
+---
+<header>
    <h1>PROLOGUE</h1>
-   <nav><a href="chapter1.html">CHAPTER I &gt;</a></nav>
 </header>
 
 <section id="contents">
-   <div class="toc-container">
-   <ol>
-      <li style="visibility:hidden; margin:0; padding:0;line-height:.1em;">can'tseeme</li>
-      <li class="lispace"><span class="tocheading">Prologue</span>
-         <ol>
-            <li><a href="#21">Interrogation, part 1</a></li>
-            <li><a href="#22">By the King's Will</a></li>
-            <li><a href="#23">Newboy's Amulet (Melitele's Heart)</a></li>
-            <li><a href="#24">By the King's Will, Continued</a></li>
-            <li><a href="#25">At the Fore</a></li>
-            <li><a href="#26">Interrogation, part 2</a></li>
-            <li><a href="#27">Aryan La Valette (At the Fore)</a></li>
-            <li><a href="#28">Interrogation, part 3</a></li>
-            <li><a href="#29">Trial by Fire</a></li>
-            <li><a href="#210">Interrogation, part 4</a></li>
-            <li><a href="#211">To the Temple</a>
-               <ol>
-                  <li><a href="#2111">Woe Unto the Vanquished</a></li>
-               </ol>
-            </li>
-            <li><a href="#212">Interrogation, part 5</a></li>
-            <li><a href="#213">Blood of His Blood</a></li>
-            <li><a href="#214">Interrogation, part 6</a></li>
-            <li><a href="#215">Escaping the Dungeons</a>
-               <ol>
-                  <li><a href="#2151">Aryan La Valette: Alive</a></li>
-                  <li><a href="#2152">Aryan La Valette: Dead</a></li>
-               </ol>
-            </li>
-            <li><a href="#216">The Riverboat</a></li>
-         </ol>
-      </li>
-   </ol>
-   </div>
+<details open markdown="block">
+  <summary>
+    Table of contents
+  </summary>
+  <ol id="decimalcontents">
+     <li style="visibility:hidden; margin:0; padding:0;line-height:.1em;">can'tseeme</li>
+     <li class="lispace"><span class="tocheading">Prologue</span>
+        <ol>
+           <li><a href="#21">Interrogation, part 1</a></li>
+           <li><a href="#22">By the King's Will</a></li>
+           <li><a href="#23">Newboy's Amulet (Melitele's Heart)</a></li>
+           <li><a href="#24">By the King's Will, Continued</a></li>
+           <li><a href="#25">At the Fore</a></li>
+           <li><a href="#26">Interrogation, part 2</a></li>
+           <li><a href="#27">Aryan La Valette (At the Fore)</a></li>
+           <li><a href="#28">Interrogation, part 3</a></li>
+           <li><a href="#29">Trial by Fire</a></li>
+           <li><a href="#210">Interrogation, part 4</a></li>
+           <li><a href="#211">To the Temple</a>
+              <ol>
+                 <li><a href="#2111">Woe Unto the Vanquished</a></li>
+              </ol>
+           </li>
+           <li><a href="#212">Interrogation, part 5</a></li>
+           <li><a href="#213">Blood of His Blood</a></li>
+           <li><a href="#214">Interrogation, part 6</a></li>
+           <li><a href="#215">Escaping the Dungeons</a>
+              <ol>
+                 <li><a href="#2151">Aryan La Valette: Alive</a></li>
+                 <li><a href="#2152">Aryan La Valette: Dead</a></li>
+              </ol>
+           </li>
+           <li><a href="#216">The Riverboat</a></li>
+        </ol>
+     </li>
+  </ol>
+</details>
 </section>
+
+<hr>
 
 <section id="20"><!--Beginning narration-->
 <p><div class="stage">[TITLE TEXT: Indeed, naught is more repulsive than these monsters that defy
@@ -1970,7 +1970,7 @@ During the rioting, 76 nonhumans perish, including the
 <p><span class="tag">GERALT:</span> I think they bought it. We need to be careful.
 </div>
 
-<hr>
+<hr class="middle">
 
 <p class="stage">[If you go the other direction, Geralt instead sees Aryan being led out of the
    torture chamber by two guards. He manages to knock them out, but collapses,
@@ -2033,7 +2033,7 @@ During the rioting, 76 nonhumans perish, including the
 <p><span class="tag">ARYAN:</span> Not your concern. We must get to the oil store, where there's a way out.
 </div>
 
-<hr>
+<hr class="middle">
 
 <p class="stage">[Geralt and Aryan navigate the prison.]</p>
 
@@ -2193,7 +2193,7 @@ During the rioting, 76 nonhumans perish, including the
            well. It is time. Go, witcher.
    </div>
 </div>
-<hr>
+<hr class="middle">
 
 <p class="stage">[If you go the other direction away from the trapdoor, Geralt instead
    witnesses two Nilfgaardian soldiers bring Louisa out into the hall where
@@ -2346,7 +2346,7 @@ During the rioting, 76 nonhumans perish, including the
         then proceed to the main gate.
 </div>
 
-<hr>
+<hr class="middle">
 
 <p class="stage">
 [Geralt leaves. As Geralt makes his way out of the castle, Shilard distracts
@@ -2545,14 +2545,3 @@ If Aryan lived: Character ending animatic cutscene plays.
    <p>
 
 </section>
-
-
-</main>
-<footer>
-   <nav><a href="tutorial.html">&lt; TUTORIAL</a></nav>
-   <nav><a href="index.html">INDEX</a></nav>
-   <nav><a href="chapter1.html">CHAPTER I &gt;</a></nav>
-</footer>
-</div>
-</body>
-</html>
