added new stuff
created pages for all intended chapters, added content to index page, added more quests to chapter 1

--- a/index.html
+++ b/index.html
@@ -5,55 +5,13 @@ nav_order: 1
 description: "A work-in-progress game transcript by Laurelnose."
 permalink: /
 ---
-<header class="sectionhead">
-   <nav style="visibility:hidden;"><a href="">&lt; CONTENTS</a></nav>
-   <h1> INDEX</h1>
-   <nav style="visibility:hidden;"><a href="">PROLOGUE &gt;</a></nav>
-</header>
-<section id="contents">
+<h1 style="margin-left: -1em;">The Witcher 2 Game Script</h1>
+<blockquote>
+   <p>DISCLAIMER: This game script is for informational purposes and is intended for private individual use only.</p>
+   <p>The author has no affiliation with CDPR or Andrzej Sapkowski. All rights reserved to respective parties.</p>
+</blockquote>
+<p>The Witcher 2 Game Script is a fan project by Laurelnose intended to compile the dialogue of <em>The Witcher 2: Assassins of Kings</em> into a readable format. <strong>This guide (obviously) contains spoilers.</strong></p>
 
-<ol id="decimalcontents">
-   <li class="lispace"><a href="tutorial/"><span class="tocheading">Tutorial</span></a></li>
-   <li class="lispace"><a href="prologue/"><span class="tocheading">Prologue</span></a>
-      <ol>
-         <li><a href="prologue/#21">Interrogation, part 1</a></li>
-         <li><a href="prologue/#22">By the King's Will</a></li>
-         <li><a href="prologue/#23">Newboy's Amulet (Melitele's Heart)</a></li>
-         <li><a href="prologue/#24">By the King's Will, Continued</a></li>
-         <li><a href="prologue/#25">At the Fore</a></li>
-         <li><a href="prologue/#26">Interrogation, part 2</a></li>
-         <li><a href="prologue/#27">Aryan La Valette (At the Fore)</a></li>
-         <li><a href="prologue/#28">Interrogation, part 3</a></li>
-         <li><a href="prologue/#29">Trial by Fire</a></li>
-         <li><a href="prologue/#210">Interrogation, part 4</a></li>
-         <li><a href="prologue/#211">To the Temple</a>
-            <ol>
-               <li><a href="prologue/#2111">Woe Unto the Vanquished</a></li>
-            </ol>
-         </li>
-         <li><a href="prologue/#212">Interrogation, part 5</a></li>
-         <li><a href="prologue/#213">Blood of His Blood</a></li>
-         <li><a href="prologue/#214">Interrogation, part 6</a></li>
-         <li><a href="prologue/#215">Escaping the Dungeons</a>
-            <ol>
-               <li><a href="prologue/#2151">Aryan La Valette: Alive</a></li>
-               <li><a href="prologue/#2152">Aryan La Valette: Dead</a></li>
-            </ol>
-         </li>
-         <li><a href="prologue/#216">The Riverboat</a></li>
-      </ol>
-   </li>
-   <li class="lispace"><span class="tocheading"><a href="chapter-1/">Chapter I</a></span>
-      <ol>
-         <li><a href="chapter-1/#31">A Rough Landing</a></li>
-         <li><a href="chapter-1/#32">By the Gods - Stringing Up Sods</a></li>
-         <li><a href="chapter-1/#33">Kayran - A Matter of Price</a></li>
-         <li>Kayran - Talk to Cedric</li>
-      </ol>
-   </li>
-   <li class="lispace"><span class="tocheading">Chapter II (Roche's Path)</span></li>
-   <li class="lispace"><span class="tocheading">Chapter II (Iorveth's Path)</span></li>
-   <li class="lispace"><span class="tocheading">Chapter III (Roche's Path)</span></li>
-   <li class="lispace"><span class="tocheading">Chapter III (Iorveth's Path)</span></li>
-</ol>
-</section>
+<p>Questions, comments, and requests can be directed to <a href="email:laurelnose@protonmail.com">laurelnose@protonmail.com</a>.</p>
+<h2 style="margin-bottom:.5em;" id="index">Index</h2>
+{% include tableofcontents.html %}
