--- a/prologue.html
+++ b/prologue.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Prologue
-nav_order: 2
+nav_order: 3
 ---
 <header>
    <h1>PROLOGUE</h1>
@@ -526,9 +526,16 @@ nav_order: 2
      </nav>
    </div>
 
-<p class="stage">[Geralt continues through the camp to find Foltest at the top of the hill where
-   the ballistas are firing. Foltest is talking to Shilard Fitz-Oesterlen, the
-   Nilfgaardian ambassador.]</p>
+<p class="stage">[Geralt continues through the camp.]</p>
+
+<div class="dialogue"><p><span class="tag">GUARD 2:</span> Go see Foltest, Geralt, 'fore the fury hits him and he hacks off
+           your head.</div>
+
+<div class="dialogue"><p><span class="tag">GUARD 1:</span> Foltest said if you don't hurry, he'll rip your balls off.
+   <p><span class="tag">GUARD 2:</span> And make a witcher's medallion out of 'em.</div>
+
+<p class="stage">[Geralt finds Foltest at the top of the hill where the ballistae are firing.
+      Foltest is talking to Shilard Fitz-Oesterlen, the Nilfgaardian ambassador.]</p>
 
 <div class="dialogue">
 <p><span class="tag">FOLTEST:</span> A beautiful day for battle! Fear not, Excellency, we're out of range
@@ -857,7 +864,7 @@ nav_order: 2
    <div class="choice"><span>As you wish.
    </span></div>
    <div class="dialogue"><p><span class="tag">GERALT:</span> If you insist.
-   <p class="stage" style="text-indent: -3.5em;">[Geralt kills Aryan and his men.]</p></div>
+   <p><em>[Geralt kills Aryan and his men.]</em></p></div>
 
    <div class="choice"><span>Surrender and save your men.
    </span></div>
@@ -890,7 +897,7 @@ nav_order: 2
               that. Drop your weapons.
       <p><span class="tag">ARYAN:</span> Should anything happen to my mother... I shall find you and kill
               you.
-      <p class="stage" style="text-indent: -3.5em;">[Aryan and his men surrender.]</p>
+      <p><em>[Aryan and his men surrender.]</em></p>
       </div>
 
       <div class="choice"><span>Let's settle this between us.
@@ -902,13 +909,13 @@ nav_order: 2
               especially liked the one of Renfri and her rogues. As I grew, I
               dreamed of facing you one day.
       <p><span class="tag">GERALT:</span> That dream will not have a happy ending. For you.
-      <p class="stage" style="text-indent: -3.5em;">[Geralt kills Aryan in single combat.]</p>
+      <p><em>[Geralt kills Aryan in single combat.]</em></p>
       </div>
 
       <div class="choice"><span>As you wish.
       </span></div>
       <div class="dialogue"><p><span class="tag">GERALT:</span> If you insist.
-      <p class="stage" style="text-indent: -3.5em;">[Geralt kills Aryan and his men.]<p></div>
+      <p><em>[Geralt kills Aryan and his men.]</em><p></div>
    </div>
 </div>
 
@@ -1467,6 +1474,8 @@ nav_order: 2
    </div>
 </div>
 
+<div class="dialogue"><p><span class="tag">TAILLES:</span> Mutant... Freak... Stinking murderer - I remember Blaviken.</div>
+
 <p class="stage">[Geralt, Roche, and Foltest leave the main temple room.]</p>
 
 <div class="dialogue">
@@ -1686,7 +1695,7 @@ nav_order: 2
       <div class="indent">
          <div class="choice"><span>[INTIMIDATION] [Attack him.]</span></div>
          <div class="dialogue">
-         <p class="stage" style="text-indent:-3.5em;">[Geralt attacks Roche. Ves shoots him in the back with a crossbow.]</p>
+         <p><em>[Geralt attacks Roche. Ves shoots him in the back with a crossbow.]</em></p>
          <p><span class="tag">ROCHE:</span> Another prisoner killed while trying to escape.
          <p><span class="tag">VES:</span> Yes, sir.
          <p><strong>[GAME OVER]</strong></div>
@@ -2533,7 +2542,7 @@ If Aryan lived: Character ending animatic cutscene plays.
    us to associate with unsavory characters like Vernon Roche... No, I'm not
    making excuses. I had my reasons.
    <div style="margin: 0; font-size: .3em">&nbsp;</div>
-   The witcher spent most of the way to Flotsam talking to a certain someone.
+   The witcher spent most of the way to Flotsam talking to someone.
    Long into the evening, as water lapped against the boat's side, Triss told
    him stories of his Unexpected Child and his toxic relationship with a
    sorceress named Yennefer. Stories of a life stolen from him.
