added ch1 sidequests
Finished chapter 1 sidequests, added a bunch of the structure of the rest of the game

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@ nav_order: 1
 description: "A work-in-progress game transcript by Laurelnose."
 permalink: /
 ---
-<h1 style="margin-left: -1em;">The Witcher 2 Game Script</h1>
+<header>
+<h1>The Witcher 2 Game Script</h1>
+</header>
 <blockquote>
    <p>DISCLAIMER: This game script is for informational purposes and is intended for private individual use only.</p>
    <p>The author has no affiliation with CDPR or Andrzej Sapkowski. All rights reserved to respective parties.</p>
 </blockquote>
 <p>The Witcher 2 Game Script is a fan project by Laurelnose intended to compile the dialogue of <em>The Witcher 2: Assassins of Kings</em> into a readable format. <strong>This guide (obviously) contains spoilers.</strong></p>
-
+<div class="indent">
+<span class="tag">Most recent update:</span> 15-Mar-2021 - Completed Chapter I sidequests (<a href="/changelog/">Changelog</a>)
+</div>
+<p>Sidequests directly related to a main quest (e.g. <a href="https://laurelnose.github.io/chapter-1/#351">The Ballista</a> during <a href="https://laurelnose.github.io/chapter-1/#35">An Indecent Proposal</a>) are nested within the main transcript. Unrelated sidequests have their own pages underneath the main act heading. Poker, arm wrestling, fistfighting, crafting quests, and “plotless” monster contracts such as the Endrega Contract have not been transcribed, since the amount of dialogue associated with them is minimal and they take a fair amount of effort to do.</p>
+<p>Character dialogue pages contain the conversations you can have with various NPCs unrelated to any questline—for instance, talking to Dandelion or Zoltan in Flotsam’s tavern.</p>
+<p>Overheard dialogue pages contain the voice lines that you can hear by coming into proximity of an NPC, without actually engaging them in a conversation.</p>
 <p>Questions, comments, and requests can be directed to <a href="email:laurelnose@protonmail.com">laurelnose@protonmail.com</a>.</p>
 <h2 style="margin-bottom:.5em;" id="index">Index</h2>
 {% include tableofcontents.html %}
