--- a/changelog.html
+++ b/changelog.html
@@ -9,7 +9,9 @@ nav_exclude: true
 <header>
 <h1>Changelog</h1>
 </header>
-
+<p class="changelog">17-Mar-2021 - First draft of Chapter I complete (still need: sneaky version of Stringing Up Sods)
+      <br>Finished Chapter I overheard dialogue
+      <br>Added Ves and various minor NPCs to Chapter I character dialogue (doublecheck: aggravating guards in town)
 <p class="changelog">15-Mar-2021 - Finished Chapter I sidequests
       <br>Added first draft of Chapter I character dialogue (still need: Ves, minor NPCs. Figure out way to incorporated deleted Wild Hunt dialogue)
       <br>Completed text document version of Chapter I up to 3.15.01</p>
