search fix maybe

--- a/prologue.html
+++ b/prologue.html
@@ -23,7 +23,8 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </section>
 <hr>
 
-<section id="20"><!--Beginning narration-->
+<section><!--Beginning narration-->
+<h2 class="sekrit" id="20">Beginning narration</h2>
 <p><div class="stage">[TITLE TEXT: Indeed, naught is more repulsive than these monsters that defy
    nature and are known by the name of witcher, as they are the offspring of
    foul sorcery and witchcraft. Unscrupulous scoundrels without conscience and
@@ -52,9 +53,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
    distance.]</p>
 </section>
 
-<section id="21"><!--Interrogation, part 1-->
+<section><!--Interrogation, part 1-->
 <div class="sectionhead">
-  <div class="sectiontitle"><h2>2.1 - INTERROGATION, PART 1 </h2></div>
+  <div class="sectiontitle"><h2 id="21">2.1 - INTERROGATION, PART 1 </h2></div>
   <nav class="sectionnav">
      <a href="#contents">CONTENTS</a>
      <a href="#22">NEXT &gt;</a>
@@ -155,9 +156,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div><!--Interrogation, part 1-->
 </section>
 
-<section id="22"><!--By the King's Will-->
+<section><!--By the King's Will-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.2 - BY THE KING'S WILL </h2></div>
+     <div class="sectiontitle"><h2 id="22">2.2 - BY THE KING'S WILL </h2></div>
      <nav class="sectionnav">
         <a href="#21">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -281,9 +282,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="23"><!--Newboy's Amulet-->
+<section><!--Newboy's Amulet-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.3 - Newboy's Amulet (Melitele's Heart) </h2></div>
+     <div class="sectiontitle"><h2 id="23">2.3 - Newboy's Amulet (Melitele's Heart) </h2></div>
      <nav class="sectionnav">
         <a href="#22">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -490,9 +491,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
             </div>
 </section>
 
-<section id="24"><!--By the King's Will, continued-->
+<section><!--By the King's Will, continued-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.4 - By the King's Will, continued </h2></div>
+     <div class="sectiontitle"><h2 id="24">2.4 - By the King's Will, continued </h2></div>
      <nav class="sectionnav">
         <a href="#23">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -688,9 +689,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="25"><!--At the Fore-->
+<section><!--At the Fore-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.5 - AT THE FORE</h2></div>
+     <div class="sectiontitle"><h2 id="25">2.5 - AT THE FORE</h2></div>
      <nav class="sectionnav">
         <a href="#24">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -733,9 +734,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 </section>
 
-<section id="26"><!--Interrogation, part 2-->
+<section><!--Interrogation, part 2-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.6 - Interrogation, part 2</h2></div>
+     <div class="sectiontitle"><h2 id="26">2.6 - Interrogation, part 2</h2></div>
      <nav class="sectionnav">
         <a href="#25">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -766,9 +767,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 </section>
 
-<section id="27"><!--Aryan La Valette, At the Fore-->
+<section><!--Aryan La Valette, At the Fore-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.7 - Aryan La Valette (At the Fore)</h2></div>
+     <div class="sectiontitle"><h2 id="27">2.7 - Aryan La Valette (At the Fore)</h2></div>
      <nav class="sectionnav">
         <a href="#26">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -897,9 +898,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 </section>
 
-<section id="28"><!--Interro, part 3-->
+<section><!--Interro, part 3-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.8 - Interrogation, part 3</h2></div>
+     <div class="sectiontitle"><h2 id="28">2.8 - Interrogation, part 3</h2></div>
      <nav class="sectionnav">
         <a href="#27">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -945,9 +946,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
      </div>
 </section>
 
-<section id="29"><!--Trial by Fire-->
+<section><!--Trial by Fire-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.9 - Trial by Fire</h2></div>
+     <div class="sectiontitle"><h2 id="29">2.9 - Trial by Fire</h2></div>
      <nav class="sectionnav">
         <a href="#28">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -1052,9 +1053,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 </section>
 
-<section id="210"><!--Interrogation 4-->
+<section><!--Interrogation 4-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.10 - Interrogation, part 4</h2></div>
+     <div class="sectiontitle"><h2 id="210">2.10 - Interrogation, part 4</h2></div>
      <nav class="sectionnav">
         <a href="#29">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -1078,9 +1079,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="211"><!--To the Temple-->
+<section><!--To the Temple-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.11 - To the Temple</h2></div>
+     <div class="sectiontitle"><h2 id="211">2.11 - To the Temple</h2></div>
      <nav class="sectionnav">
         <a href="#210">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -1367,9 +1368,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="212"><!--Interrogation, 5-->
+<section><!--Interrogation, 5-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.12 - Interrogation, part 5</h2></div>
+     <div class="sectiontitle"><h2 id="212">2.12 - Interrogation, part 5</h2></div>
      <nav class="sectionnav">
         <a href="#211">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -1394,9 +1395,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="213"><!--blood of his blood-->
+<section><!--blood of his blood-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.13 - Blood of his blood</h2></div>
+     <div class="sectiontitle"><h2 id="213">2.13 - Blood of his blood</h2></div>
      <nav class="sectionnav">
         <a href="#212">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -1536,9 +1537,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
    dead and Geralt alone in the room.]</p>
 </section>
 
-<section id="214"><!--Interrogatoin 6-->
+<section><!--Interrogatoin 6-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.14 - Interrogation, part 6</h2></div>
+     <div class="sectiontitle"><h2 id="214">2.14 - Interrogation, part 6</h2></div>
      <nav class="sectionnav">
         <a href="#213">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -1758,9 +1759,9 @@ During the rioting, 76 nonhumans perish, including the
 <p class="stage">[Roche leaves the key in front of Geralt, and exits.]</p>
 </section>
 
-<section id="215"><!--Escaping the dungeons-->
+<section><!--Escaping the dungeons-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.15 - Escaping the dungeons</h2></div>
+     <div class="sectiontitle"><h2 id="215">2.15 - Escaping the dungeons</h2></div>
      <nav class="sectionnav">
         <a href="#214">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -2343,9 +2344,9 @@ During the rioting, 76 nonhumans perish, including the
 
 </section>
 
-<section id="216"><!--the riverboat-->
+<section><!--the riverboat-->
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>2.16 - the riverboat</h2></div>
+     <div class="sectiontitle"><h2 id="216">2.16 - the riverboat</h2></div>
      <nav class="sectionnav">
         <a href="#25">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
