--- a/changelog.html
+++ b/changelog.html
@@ -18,3 +18,17 @@ nav_exclude: true
 <p class="changelog">13-Mar-2021 - Added Overheard Dialogue to Prologue
 <p class="changelog">10-Mar-2021 - Finished Tutorial and Prologue
 <p class="changelog">9-Mar-2021 - Site created</p>
+
+<header>
+<h2>To-Do List</h2>
+</header>
+<ul>
+   <li>Chapter 1
+      <ul>
+      <li>Get dialogue for sneaking up behind gallows in <em>Stringing up Sods</em></li>
+      <li>Find location of mystery fistfighter, fistfighter's wife, and that one pirate</li>
+      <li>Get dialogue for antagonizing guards post-kayran</li>
+      <li>Check townspeople's dialogue before finding Cedric</li>
+      </ul>
+   </li>
+</ul>
