--- a/prologue-overheard.html
+++ b/prologue-overheard.html
@@ -30,9 +30,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 <hr>
 <p class="stage">[For the purposes of the overheard dialogue, ‘[NAME] 1’ and ‘[NAME] 2’ indicates two different people in a specific exchange, not that there are only two of that NPC type in the entire area.]</p>
 
-<section id="1">
+<section>
 <div class="sectionhead">
-  <div class="sectiontitle"><h2>FOLTEST'S CAMP - MESS TENT</h2></div>
+  <div class="sectiontitle"><h2 id="1">FOLTEST'S CAMP - MESS TENT</h2></div>
   <nav class="sectionnav">
      <a href="#32">&lt; PREV</a>
      <a href="#contents">CONTENTS</a>
@@ -91,9 +91,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="2">
+<section>
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>FOLTEST'S CAMP - TRAINING GROUNDS</h2></div>
+     <div class="sectiontitle"><h2 id="2">FOLTEST'S CAMP - TRAINING GROUNDS</h2></div>
      <nav class="sectionnav">
         <a href="#1">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -142,9 +142,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="3">
+<section>
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>FOLTEST'S CAMP - MEDICS TENT</h2></div>
+     <div class="sectiontitle"><h2 id="3">FOLTEST'S CAMP - MEDICS TENT</h2></div>
      <nav class="sectionnav">
         <a href="#2">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -195,9 +195,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="4">
+<section>
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>THE BALLISTAE AND SIEGE TOWER</h2></div>
+     <div class="sectiontitle"><h2 id="4">THE BALLISTAE AND SIEGE TOWER</h2></div>
      <nav class="sectionnav">
         <a href="#3">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -230,9 +230,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="5">
+<section>
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>THE CASTLE VILLAGE</h2></div>
+     <div class="sectiontitle"><h2 id="5">THE CASTLE VILLAGE</h2></div>
      <nav class="sectionnav">
         <a href="#4">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
@@ -309,9 +309,9 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </div>
 </section>
 
-<section id="6">
+<section>
    <div class="sectionhead">
-     <div class="sectiontitle"><h2>THE DUNGEONS OF THE LA VALETTES</h2></div>
+     <div class="sectiontitle"><h2 id="6">THE DUNGEONS OF THE LA VALETTES</h2></div>
      <nav class="sectionnav">
         <a href="#5">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
