finished chapter 2 (roche)

--- a/prologue.html
+++ b/prologue.html
@@ -31,7 +31,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
    virtue, they are veritable creatures from hell, capable only of taking
    lives...
 <p style="margin: 0; text-align:right">MONSTRUM - A PORTRAYAL OF WITCHERS, ANONYMOUS</p>
-<div style="margin: 0; font-size: .3em">&nbsp;</div>
+<div class="narbreak">&nbsp;</div>
  Six years have passed since that memorable day when the Northern Kingdoms,
    their forces united, defeated the hosts of Nilfgaard in open battle at
    Brenna.
@@ -1318,7 +1318,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
       </div>
       <div class="indent">
          <div class="dialogue"><span class="fail">[FAILURE]</span>
-         <span class="tag">MAN:</span> You must believe us. We have nothin'.</p></div>
+         <span class="tag">MAN:</span> You must believe us. We have nothin'.</div>
 
          <div class="dialogue">
          <span class="succ">[SUCCESS]</span>
@@ -1342,7 +1342,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
    <p><span class="tag">MAN:</span> But where...?
    </div>
 </div>
-
+<p class="stage">[Later, this sidequest reaches a conclusion in <a href="/chapter-1-sidequests/#woetothevanquished">Chapter 1</a>.]
 <hr>
 
 <p class="stage">[After finding a way into the temple through the sewers, Geralt looks through a
@@ -1722,22 +1722,21 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 <div class="stage">[Geralt experiences a flashback to his death.
 <br>   NARRATOR: Rivia - population 1234. In that, 253 nonhumans.
-   <div style="margin: 0; font-size: .3em">&nbsp;</div>
+   <div class="narbreak">&nbsp;</div>
       September 25, 1268 - a riot erupts, a massacre ensues. The streets run
       with the blood of elves and dwarves. One person finds the courage to face
       the raging crowd.
-      <div style="margin: 0; font-size: .3em">&nbsp;</div>
-During the rioting, 76 nonhumans perish, including the
+      <div class="narbreak">&nbsp;</div>
+      During the rioting, 76 nonhumans perish, including the
       witcher, Geralt of Rivia, stabbed in the chest with a pitchfork by a man
       of whom we know only that his name was Rob and he owed 3 crowns at the
       local tavern. Yennefer of Vengerberg dies trying to heal the witcher...
-      <div style="margin: 0; font-size: .3em">&nbsp;</div>
-
+      <div class="narbreak">&nbsp;</div>
       The bodies of Geralt and the sorceress are taken away by a mysterious
       young girl with ashen hair. Their place of internment remains unknown.]</div>
 
 <div class="dialogue">
-<br><p><span class="tag">GERALT:</span> I remember... Rivia, Yennefer...</p>
+<p><span class="tag">GERALT:</span> I remember... Rivia, Yennefer...</p>
 </div>
 
 <div class="dialogue">
@@ -2500,38 +2499,36 @@ During the rioting, 76 nonhumans perish, including the
 </div>
 
 <div class="stage">[If Aryan died: Character ending animatic cutscene plays.
-   <div style="margin: 0; font-size: .3em">&nbsp;</div>
+   <div class="narbreak">&nbsp;</div>
    NARRATOR: War is a good time to forge friendships, alliances. Aryan La
       Valette, busy building walls and forging swords, forgot that. When he
       was gone, those he loved were forced to forge friendships with those he
       hated.
-      <div style="margin: 0; font-size: .3em">&nbsp;</div></div>
+      <div class="narbreak">&nbsp;</div></div>
 <div class="stage">
 If Aryan lived: Character ending animatic cutscene plays.
-<div style="margin: 0; font-size: .3em">&nbsp;</div>
+<div class="narbreak">&nbsp;</div>
 
    NARRATOR: Honor's a curious thing. Honor made Aryan fight a mismatched
       battle against the might of Temeria. Facing defeat, honor told Aryan to
       bow his neck to save his men. But that same honor prevented him from
       saving himself.]</div>
-<p>
+
 <div class="stage">[DANDELION, NARRATING: Life can't be easy for anyone who's labeled a regicide.
    That goes triple for Geralt. Could his luck get any worse?! I've known the
    witcher for long and I'm sure kings, courts and politics concern him as much
-   as last year's snow.<div style="margin: 0; font-size: .3em">&nbsp;</div>
+   as last year's snow.<div class="narbreak">&nbsp;</div>
    But, hey! Life doesn't always go as planned, right? Sometimes it even forces
    us to associate with unsavory characters like Vernon Roche... No, I'm not
    making excuses. I had my reasons.
-   <div style="margin: 0; font-size: .3em">&nbsp;</div>
+   <div class="narbreak">&nbsp;</div>
    The witcher spent most of the way to Flotsam talking to someone.
    Long into the evening, as water lapped against the boat's side, Triss told
    him stories of his Unexpected Child and his toxic relationship with a
    sorceress named Yennefer. Stories of a life stolen from him.
-   <div style="margin: 0; font-size: .3em">&nbsp;</div>
+   <div class="narbreak">&nbsp;</div>
    Am I boring you?
-   <div style="margin: 0; font-size: .3em">&nbsp;</div>
+   <div class="narbreak">&nbsp;</div>
    Don't set this tale aside. Give me just a few more minutes. Someone
    special's about to appear... in dire straits, upon a scaffold.]</div>
-   <p>
-
 </section>
