--- a/changelog.html
+++ b/changelog.html
@@ -9,6 +9,12 @@ nav_exclude: true
 <header>
 <h1>Changelog</h1>
 </header>
+<p class="changelog">29-Mar-2021 - Completed Chapter II (Roche) main quests
+      <br>Completed Chapter II (Roche) character dialogue
+<p class="changelog">28-Mar-2021 - Completed Chapter II (Roche) sidequests
+      <br>Added <em>Woe Unto the Vanquished</em> conclusion to the Chapter I sidequests
+      <br>Completed Chapter I Character Dialogue
+      <br>Added additional hanging dialogue to Chapter I
 <p class="changelog">17-Mar-2021 - First draft of Chapter I complete (still need: sneaky version of Stringing Up Sods)
       <br>Finished Chapter I overheard dialogue
       <br>Added Ves and various minor NPCs to Chapter I character dialogue (doublecheck: aggravating guards in town)
@@ -19,16 +25,15 @@ nav_exclude: true
 <p class="changelog">10-Mar-2021 - Finished Tutorial and Prologue
 <p class="changelog">9-Mar-2021 - Site created</p>
 
+<section>
 <header>
 <h2>To-Do List</h2>
 </header>
 <ul>
-   <li>Chapter 1
+   <li>Chapter II (Roche)
       <ul>
-      <li>Get dialogue for sneaking up behind gallows in <em>Stringing up Sods</em></li>
-      <li>Find location of mystery fistfighter, fistfighter's wife, and that one pirate</li>
-      <li>Get dialogue for antagonizing guards post-kayran</li>
-      <li>Check townspeople's dialogue before finding Cedric</li>
+      <li>Get overheard dialogue</li>
       </ul>
    </li>
 </ul>
+</section>
