added parts of 3R, Letho convo
added parts of 3R, made final Letho convo public, minor edits to previous chapters

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ permalink: /
 </blockquote>
 <p>The Witcher 2 Game Script is a fan project by Laurelnose intended to compile the dialogue of <em>The Witcher 2: Assassins of Kings</em> into a readable format. <strong>This guide (obviously) contains spoilers.</strong></p>
 <div class="indent">
-<span class="tag">Most recent update:</span> 29-Mar-2021 - Chapter II (Roche) completed (<a href="/changelog/">Changelog</a>)
+<span class="tag">Most recent update:</span> 30-June-2021 - Parts of Chapter III (Roche) completed (<a href="/changelog/">Changelog</a>)
 </div>
 <p>Sidequests directly related to a main quest (e.g. <a href="https://laurelnose.github.io/chapter-1/#351">The Ballista</a> during <a href="https://laurelnose.github.io/chapter-1/#35">An Indecent Proposal</a>) are nested within the main transcript. Unrelated sidequests have their own pages underneath the main act heading. Poker, arm wrestling, fistfighting, crafting quests, and “plotless” monster contracts such as the Endrega Contract have not been transcribed, since the amount of dialogue associated with them is minimal and they take a fair amount of effort to do.</p>
 <p>Character dialogue pages contain the conversations you can have with various NPCs unrelated to any questline—for instance, talking to Dandelion or Zoltan in Flotsam’s tavern.</p>
