--- a/prologue.html
+++ b/prologue.html
@@ -1880,7 +1880,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 <div class="dialogue">
 <p><span class="tag">EXECUTIONER:</span> You're early. Appointment's not till tomorrow.</p>
-<P><span class="tag">GERALT:</span> Sorry, I'm in a hurry. You'll see me today.</p>
+<P><span class="tag">GERALT:</span> Sorry, I'm in a hurry. You'll see me today.</p></div>
 
 <p class="stage">[Geralt kills the executioner and releases Aryan, who falls to the ground.]</p>
 
@@ -2414,6 +2414,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 
 <p class="stage">[Geralt makes his way down to the river boat where Roche and Triss await.]
 
+<div class="indent">
 <div class="choice"><span>[If Aryan La Valette was alive]</span></div>
 <div class="dialogue"><p><span class="tag">ROCHE:</span> Bloody hell, you didn't have to torch the castle...</div>
 
@@ -2429,6 +2430,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
         dungeon into another Blaviken.
 <p><span class="tag">GERALT:</span> Can we sail? That peace and quiet might disappear irretrievably at any
         moment.
+</div>
 </div>
 
 <div class="dialogue">
