--- a/changelog.html
+++ b/changelog.html
@@ -9,21 +9,23 @@ nav_exclude: true
 <header>
 <h1>Changelog</h1>
 </header>
-<p class="changelog">29-Mar-2021 - Completed Chapter II (Roche) main quests
+<p class="changelog"><strong>30-Jun-2021</strong> - Added Chapter III (Roche) quests up to the <em>Summit of Mages</em> (missing the Anais rescue, final dragon fight)
+      <br>Added final Letho conversation to Epilogue (missing: other epilogue quests for Roche & Iorveth's paths)
+<p class="changelog"><strong>29-Mar-2021</strong> - Completed Chapter II (Roche) main quests
       <br>Completed Chapter II (Roche) character dialogue
-<p class="changelog">28-Mar-2021 - Completed Chapter II (Roche) sidequests
+<p class="changelog"><strong>28-Mar-2021</strong> - Completed Chapter II (Roche) sidequests
       <br>Added <em>Woe Unto the Vanquished</em> conclusion to the Chapter I sidequests
       <br>Completed Chapter I Character Dialogue
       <br>Added additional hanging dialogue to Chapter I
-<p class="changelog">17-Mar-2021 - First draft of Chapter I complete (still need: sneaky version of Stringing Up Sods)
+<p class="changelog"><strong>17-Mar-2021</strong> - First draft of Chapter I complete (still need: sneaky version of Stringing Up Sods)
       <br>Finished Chapter I overheard dialogue
       <br>Added Ves and various minor NPCs to Chapter I character dialogue (doublecheck: aggravating guards in town)
-<p class="changelog">15-Mar-2021 - Finished Chapter I sidequests
+<p class="changelog"><strong>15-Mar-2021</strong> - Finished Chapter I sidequests
       <br>Added first draft of Chapter I character dialogue (still need: Ves, minor NPCs. Figure out way to incorporated deleted Wild Hunt dialogue)
       <br>Completed text document version of Chapter I up to 3.15.01</p>
-<p class="changelog">13-Mar-2021 - Added Overheard Dialogue to Prologue
-<p class="changelog">10-Mar-2021 - Finished Tutorial and Prologue
-<p class="changelog">9-Mar-2021 - Site created</p>
+<p class="changelog"><strong>13-Mar-2021</strong> - Added Overheard Dialogue to Prologue
+<p class="changelog"><strong>10-Mar-2021</strong> - Finished Tutorial and Prologue
+<p class="changelog"><strong>9-Mar-2021</strong> - Site created</p>
 
 <section>
 <header>
