--- a/epilogue.html
+++ b/epilogue.html
@@ -3,9 +3,10 @@ layout: default
 title: Epilogue
 nav_order: 9
 permalink: /epilogue/
-nav_exclude: true
-last_modified_date: 2021-03-15 19:20:00 -0800
+nav_exclude: false
+last_modified_date: 2021-06-30 21:27:00 -0800
 ---
+<!--TAKE OUT NAV EXCLUDE WHEN FINISHED-->
 
 <header>
    <h1>EPILOGUE</h1>
@@ -30,6 +31,7 @@ last_modified_date: 2021-03-15 19:20:00 -0800
 </section>
 
 <hr>
+{% include wip.html %}
 
 <section>
    <div class="sectionhead">
@@ -113,7 +115,6 @@ last_modified_date: 2021-03-15 19:20:00 -0800
    We struck a deal. My soul for that of Yennefer. He agreed without hesitation.]</div>
 
 <div class="dialogue">
-   <br>
 <p><span class="tag">LETHO:</span> Back with me, friend? Got the feeling you left for a minute...
 <p><span class="tag">GERALT:</span> Memories... I remember the Hanged Man's Tree and the Wild Hunt. I
         remember the exchange - me for Yennefer.
