--- a/changelog.html
+++ b/changelog.html
@@ -9,6 +9,8 @@ nav_exclude: true
 <header>
 <h1>Changelog</h1>
 </header>
+<p class="changelog"><strong>02-Jul-2021</strong> - Completed Chapter III (Roche)
+   <br>Completed Epilogue (Roche); currently separated out from the unfinished "Epilogue (Iorveth)", may put them back into one page eventually
 <p class="changelog"><strong>30-Jun-2021</strong> - Added Chapter III (Roche) quests up to the <em>Summit of Mages</em> (missing the Anais rescue, final dragon fight)
       <br>Added final Letho conversation to Epilogue (missing: other epilogue quests for Roche & Iorveth's paths)
 <p class="changelog"><strong>29-Mar-2021</strong> - Completed Chapter II (Roche) main quests
@@ -35,6 +37,15 @@ nav_exclude: true
    <li>Chapter II (Roche)
       <ul>
       <li>Get overheard dialogue</li>
+      </ul>
+   </li>
+   <li>
+      Chapter III (Roche)
+      <ul>
+         <li>Sidequests</li>
+         <li>Character dialogue</li>
+         <li>Get overheard dialogue</li>
+         <li>Do a Siegfried run</li>
       </ul>
    </li>
 </ul>
