--- a/epilogue.html
+++ b/epilogue.html
@@ -39,8 +39,26 @@ last_modified_date: 2021-07-2 21:27:00 -0800
       <a href="#roche">NEXT &gt;</a>
    </nav>
 </div> 
+<div class="subsectionhead">
+   <div><h3 id="helpediorveth">8.1.1 - HELPED IORVETH</h3></div>
+   <nav class="sectionnav">
+      <a href="#iorveth">&lt; PREV</a>
+      <a href="#contents">CONTENTS</a>
+      <a href="#helpedtrissi">NEXT &gt;</a>
+   </nav>
+ </div>
 
 <p class="stage">[WIP]</p>
+<div class="subsectionhead">
+   <div><h3 id="helpedtrissi">8.1.2 - RESCUED TRISS</h3></div>
+   <nav class="sectionnav">
+      <a href="#helpediorveth">&lt; PREV</a>
+      <a href="#contents">CONTENTS</a>
+      <a href="#roche">NEXT &gt;</a>
+   </nav>
+ </div>
+ <p class="stage">[WIP]</p>
+
 
 </section>
 
@@ -64,7 +82,7 @@ last_modified_date: 2021-07-2 21:27:00 -0800
    <nav class="sectionnav">
       <a href="#roche">&lt; PREV</a>
       <a href="#contents">CONTENTS</a>
-      <a href="#helpedtriss">NEXT &gt;</a>
+      <a href="#helpedtrissr">NEXT &gt;</a>
    </nav>
  </div>
  
@@ -240,7 +258,7 @@ last_modified_date: 2021-07-2 21:27:00 -0800
 <section><!--HELPED TRISS-->
    <div class="subsectionhead">
       <div class="sectiontitle">
-         <h3 id="helpedtriss">8.2.2 - RESCUED TRISS</h3>
+         <h3 id="helpedtrissr">8.2.2 - RESCUED TRISS</h3>
       </div>
       <nav class="sectionnav">
          <a href="#helpedroche">&lt; PREV</a>
@@ -462,7 +480,7 @@ last_modified_date: 2021-07-2 21:27:00 -0800
    <div class="sectionhead">
      <div class="sectiontitle"><h2 id="meetingletho">8.3 - MEETING LETHO</h2></div>
      <nav class="sectionnav">
-     <a href="#helpedtriss">&lt; PREV</a>
+     <a href="#helpedtrissr">&lt; PREV</a>
         <a href="#contents">CONTENTS</a>
         <a href="#ending">NEXT &gt;</a>
      </nav>
