added some letho

--- a/epilogue.html
+++ b/epilogue.html
@@ -868,23 +868,53 @@ last_modified_date: 2021-07-2 21:27:00 -0800
            never see me again. Force me to fight, and this time I'll kill you.</div>
 
    <div class="indent">
-      <div class="choice"><span>Give it your best shot.
-      </span></div>
+      <div class="choice">
+         <span>Go. Somewhere far away.</span>
+      </div>
       <div class="dialogue">
-      <p><span class="tag">GERALT:</span> Time to fight. Ready?
-      <p><span class="tag">LETHO:</span> As I'll ever be.
-      <p><em>[Geralt and Letho clash.]</em></div>
-
-      <div class="choice"><span>Go. Somewhere far away.
-      </span></div>
+         <p><span class="tag">GERALT:</span> I've learned all I wanted to know. I can feel the memories coming back. Your death won't change a thing. Go where you will.</p>
+         <p><span class="tag">LETHO:</span> Just like that? No threats? No words of wisdom?</p>
+         <p><span class="tag">GERALT:</span> You going or not?</p>
+         <p><span class="tag">LETHO:</span> Huh. Farewell, Geralt.</p>
+         <p><em>[Letho leaves.]</em></p>
+      </div>
+      
+      <div class="choice">
+         <span>Give it your best shot.</span>
+      </div>
       <div class="dialogue">
-      <p><span class="tag">GERALT:</span> I've learned all I wanted to know. I can feel the memories coming
-              back. Your death won't change a thing. Go where you will.
-      <p><span class="tag">LETHO:</span> Just like that? No threats? No words of wisdom?
-      <p><span class="tag">GERALT:</span> You going or not?
-      <p><span class="tag">LETHO:</span> Huh. Farewell, Geralt.
-      <p><em>[Letho leaves.]</em></div>
+         <p><span class="tag">GERALT:</span> Time to fight. Ready?</p>
+         <p><span class="tag">LETHO:</span> As I'll ever be.</p>
+      </div>
 </div></div>
+<p class="stage">[Geralt and Letho clash.]</p>
+
+<div class="dialogue">
+   <p><span class="tag">LETHO:</span> The wolf has teeth.</p>
+   <p><span class="tag">GERALT:</span> And they're sharp.</p>
+   <p><span class="tag">LETHO:</span> I'm better - I can tell already.</p>
+   <p><span class="tag">GERALT:</span> Of course you can.</p>
+   <p><span class="tag">LETHO:</span> You tire quickly.</p>
+   <p><span class="tag">GERALT:</span> I'm tired of your talking.</p>
+</div>
+
+<div class="dialogue">
+   <p><span class="tag">LETHO:</span> You fear death?</p>
+   <p><span class="tag">GERALT:</span> Stop whining and fight.</p>
+   <p><span class="tag">LETHO:</span> What does it feel like to be almost dead?</p>
+   <p><span class="tag">GERALT:</span> I said, fight.</p>
+</div>
+
+<div class="dialogue">
+   <p><span class="tag">LETHO:</span> I don't want to kill you.</p>
+   <p><span class="tag">GERALT:</span> And I'll kill you gladly.</p>
+   <p><span class="tag">LETHO:</span> You're nowhere near my level.</p>
+   <p><span class="tag">GERALT:</span> Course not. I'm no kingslayer.</p>
+</div>
+
+<p class="stage">
+   [Geralt defeats Letho, and walks away.]
+</p>
 </section>
 
 <section><!--FINAL NARRATION: (IORVETH)-->
@@ -930,15 +960,15 @@ last_modified_date: 2021-07-2 21:27:00 -0800
    As it had before, powerful Kaedwen swallowed Upper Aedirn whole. Yet
    subsequent events would render Henselt's triumph short-lived.
 <div class="narbreak">&nbsp;</div>
-   <span style="font-weight:600">[If Geralt rescued Triss]</span> After Foltest's death, Temeria's neighbors began to vie for the glittering prize that was the realm's throne. Yet the murders of first Demavend, then Henselt, forced them to look to their own problems. Temeria fell prey to its power-hungry barons. But Vernon Roche held a light of hope for the dying realm and he tucked it away in a place safe and still to await better times.
+   <span style="font-weight:500">[If Geralt rescued Triss]</span> After Foltest's death, Temeria's neighbors began to vie for the glittering prize that was the realm's throne. Yet the murders of first Demavend, then Henselt, forced them to look to their own problems. Temeria fell prey to its power-hungry barons. But Vernon Roche held a light of hope for the dying realm and he tucked it away in a place safe and still to await better times.
 <div class="narbreak">&nbsp;</div>
-   <span style="font-weight:600">[If Geralt rescued Anaïs and sent her to Radovid]</span> When King Foltest fell at the hands of an assassin, chaos engulfed his realm. Where others saw spoils, Roche saw his motherland bleeding. Vernon made a difficult choice, surrendering Foltest's daughter to Radovid. The Redanian ruler, trump card in hand, turned Temeria into his protectorate and began restoring peace. The kingdom's inhabitants soon learned why Radovid was called "The Stern."
+   <span style="font-weight:500">[If Geralt rescued Anaïs and sent her to Radovid]</span> When King Foltest fell at the hands of an assassin, chaos engulfed his realm. Where others saw spoils, Roche saw his motherland bleeding. Vernon made a difficult choice, surrendering Foltest's daughter to Radovid. The Redanian ruler, trump card in hand, turned Temeria into his protectorate and began restoring peace. The kingdom's inhabitants soon learned why Radovid was called "The Stern."
 <div class="narbreak">&nbsp;</div>
-   <span style="font-weight:600">[If Geralt rescued Anaïs and sent her to Natalis]</span> With Foltest slain, Temeria's barons began to vie for the throne. Many dreamt of donning the crown, yet none could assemble the allies required to snatch it. The kingdom's last hope, as it teetered on the edge of civil war, lay in little Anaïs. Natalis was named regent and ruled the land, yet the girl was the living symbol of the realm's salvaged unity. 
+   <span style="font-weight:500">[If Geralt rescued Anaïs and sent her to Natalis]</span> With Foltest slain, Temeria's barons began to vie for the throne. Many dreamt of donning the crown, yet none could assemble the allies required to snatch it. The kingdom's last hope, as it teetered on the edge of civil war, lay in little Anaïs. Natalis was named regent and ruled the land, yet the girl was the living symbol of the realm's salvaged unity. 
 <div class="narbreak">&nbsp;</div>
-   <span style="font-weight:600">[If Triss intervened at the Summit]</span> Years before, Geralt of Rivia had witnessed the fall of the Council and Conclave of mages. The summit in Loc Muinne re-established both bodies... their founders sacrificing Síle de Tansarville and her accomplices. Yet Radovid also required humility and loyalty from the proud mages. But this did not sit well with all of them. 
+   <span style="font-weight:500">[If Triss intervened at the Summit]</span> Years before, Geralt of Rivia had witnessed the fall of the Council and Conclave of mages. The summit in Loc Muinne re-established both bodies... their founders sacrificing Síle de Tansarville and her accomplices. Yet Radovid also required humility and loyalty from the proud mages. But this did not sit well with all of them. 
 <div class="narbreak">&nbsp;</div>
-   <span style="font-weight:600">[If Triss was not at the Summit]</span> A tempest descended upon the North - at least partly the work of manipulative mages. It seemed the turmoil in Temeria, Aedirn, and Kaedwen would benefit them most. Common folk turned against sorceresses and all "magic freaks," witchers included. Castles that had hitherto welcomed mavens of the magical arts now shut their gates to any who sought shelter there. A witch hunt ensued. 
+   <span style="font-weight:500">[If Triss was not at the Summit]</span> A tempest descended upon the North - at least partly the work of manipulative mages. It seemed the turmoil in Temeria, Aedirn, and Kaedwen would benefit them most. Common folk turned against sorceresses and all "magic freaks," witchers included. Castles that had hitherto welcomed mavens of the magical arts now shut their gates to any who sought shelter there. A witch hunt ensued. 
 <div class="narbreak">&nbsp;</div>
    It was a time of great uncertainty, of rape accomplished by royal decree.
    Yet as troubled as the days seemed, we who had in some way shaped the
